mdfrier/src/snapshots/mdfrier__tests__code_block_before_list_spacing.snap
---
source: mdfrier/src/lib.rs
expression: output
---
rust
let x = 1;                                                                      

- list item
