mdfrier/src/snapshots/mdfrier__tests__code_block_spacing.snap
---
source: mdfrier/src/lib.rs
expression: output
---
Paragraph before.

rust
let x = 1;                                                                      

Paragraph after.
