mdfrier/src/snapshots/mdfrier__tests__inline_image_surrounding_text.snap
---
source: mdfrier/src/lib.rs
expression: output
---
This a paragraph.
Here we have an "inline" image, ![inline](./notfound.img), and trailing text.
![Loading...](./notfound.img)
Should be split up nicely.
