mdfrier/src/snapshots/mdfrier__tests__list_preserve_continuations.snap
---
source: mdfrier/src/lib.rs
expression: output
---
1. First ordered list item
2. Another item

   Continuation of item.
   Carry on.

   Further continuation.
3. Last item
